@@ -37,7 +37,16 @@ ARG=$@
 # add execute permission to rt
 chmod +x ./rt/bin/*
 
+# prepare jvm params
+# default to minimum 4gb heap if Xms not set.
+JAVA_OPTS="$JAVA_OPTS"
+if [[ ! ${JAVA_OPTS} = *"-Xms"* ]]; then
+  JAVA_OPTS+=" -Xms4g"
+fi
 
+# to suppress illegal reflective access warning out of xnio and protobuf
+# (we depend on xnio transitively via undertow-core)
+JAVA_OPTS+=" --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED"
 
 ####### WATCHGUARD IMPLEMENTATION #######
 #				    	#
@@ -120,7 +129,7 @@ if $guard; then
 		lastBoot=$newBoot
 
 		# Execute Java kernel
-		env EVMJIT="-cache=1" ./rt/bin/java -Xms4g \
+		env EVMJIT="-cache=1" ./rt/bin/java ${JAVA_OPTS} \
 			-cp "./lib/*:./lib/libminiupnp/*:./mod/*" org.aion.Aion "$@" &
 		kPID=$!
 		running=true
@@ -136,7 +145,6 @@ if $guard; then
 
 		# Watchguard
 		while $watching; do
-
 			sleep $sample
 
 			# [1] Log timestamp (last 60 sec) OR [2] PID process state ZOMBIE/DEAD
@@ -159,7 +167,7 @@ if $guard; then
 			  for ((i=0; i<${#threads[@]}; ++i)); do
 			    tTime=$(ps --pid $kPID | egrep -o "[0-9]{2}\.[0-9]{2} ${threads[i]}" | cut -d" " -f1)
 			    tState=$(./rt/bin/jstack -l $kPID | egrep -A1 "${threads[i]}" | egrep -o "State.*" | cut -d" " -f2)
-			    if [[ $tTime == ${tPrev[i]} ]] && [[ $tState == "BLOCKED" ]]; then 
+			    if [[ $tTime == ${tPrev[i]} ]] && [[ $tState == "BLOCKED" ]]; then
 			      echo "## ${threads[i]} THREAD DEAD ##"
 			      (./rt/bin/jstack -l $kPID | egrep -A1 "${threads[i]}") > threadDump_$countRebounce.txt
 			      watching=false
@@ -171,7 +179,6 @@ if $guard; then
 			fi
 
 		done
-
 		# Shutsdown Aion kernel
 		echo "## Killing Kernel ##"
 		kill $kPID
@@ -196,10 +203,37 @@ if $guard; then
 		echo "############################## REBOUNCE COUNT [$countRebounce] ##############################"
 
 	done
-
 else
+	JAVA_CMD=java
+	if [ -d "./rt" ]; then
+			JAVA_CMD="./rt/bin/java"
+	elif [ -d "./pack/rt" ]; then
+			JAVA_CMD="./pack/rt/bin/java"
+	elif [ -d "$JAVA_HOME" ]; then
+			JAVA_CMD="$JAVA_HOME/bin/java"
+	fi
 
-  	env EVMJIT="-cache=1" ./rt/bin/java -Xms4g \
-  		-cp "./lib/*:./lib/libminiupnp/*:./mod/*" org.aion.Aion "$@"
+	# if there's CLI args, we just run it and quit
+	if [ "$#" -gt 0 ]; then
+		env EVMJIT="-cache=1" $JAVA_CMD ${JAVA_OPTS} \
+			-cp "./lib/*:./lib/libminiupnp/*:./mod/*" org.aion.Aion "$@"
+		exit
+	fi
 
+	# otherwise, kernel will start; run it in background
+	trap "exit" INT TERM
+	trap "exit_kernel" EXIT
+
+	exit_kernel() {
+		if [ ! -z "$kernel_pid" ]; then
+			kill "$kernel_pid" &> /dev/null
+			wait "$kernel_pid" &> /dev/null
+		fi
+		exit 1
+	}
+
+  	env EVMJIT="-cache=1" $JAVA_CMD ${JAVA_OPTS} \
+  		-cp "./lib/*:./lib/libminiupnp/*:./mod/*" org.aion.Aion "$@" &
+    kernel_pid=$!
+    wait
 fi
